userprofile.css
/* PARENT *********************************** */
.parent-container {
    display: flex;
    flex-direction: column;
}

/* HEADER *********************************** */
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100;0,300;1,100&display=swap');/* CSS VARIABLES */
:root {
    --clr-dark: #020024;
    --clr-light: #F6EEF2;
    --clr-bg: #f4f4f4;
    --clr-primary: #0A502E;
    --clr-secondary: #7E73F9;
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
}

/* NAV BAR */
.navBar {
    background-color: var(--clr-primary);
    display: flex;
    align-items: center;
    justify-content: flex-start;
    gap: 10px;
    border-bottom: 1px solid white;
    padding: 20px;
}

#name {
    font-family: 'Bebas Neue', sans-serif;
    letter-spacing: 2px;
    font-size: xx-large;
}

#name-link{
    font-family: 'Bebas Neue', sans-serif;
    letter-spacing: 2px;
    font-size: xx-large;
    color: white;
    text-decoration: none;
}

#name-link:hover{
    font-family: 'Bebas Neue', sans-serif;
    letter-spacing: 2px;
    font-size: 31px;
    color: white;
    text-shadow: 3px 4px #163d15;
    transition: all .6s;
}


.navs {
    display: flex;
    align-items: center;
    justify-content: end;
    flex: 1;

    padding: 10px;
    gap: 1em;
}

.navs > p { 
    font-family: 'Montserrat', sans-serif;
    font-style: italic;
}

.navs > a {
    font-family: 'Montserrat', sans-serif;
    font-style: italic;
    font-size: small;
    color: var(--clr-light);
    text-decoration: none;
}

.navs > a:hover {
    text-decoration: underline;
}

/* PROFILE BOX *********************************** */
.profile-box {
    display: flex;
    justify-content: space-around;
    background-color: rgba(255, 255, 255, 0.949);
    padding-top: 10px;
    color: white;
    height: 300px;
    outline: 2px solid var(--clr-primary);
    margin: 0 50px;
}

[class*="profile"] {
    display: flex;
}

.rounded-image {
    padding: 5px 5px 5px 5px;
    width: 200px;
    max-height: 250px;
    border: 1px solid var(--clr-primary);
    border-radius: 55%;
}

.profile-userinfo {
    display: flex;
    flex-direction: column;
    font-family: 'Montserrat', sans-serif;
    color: var(--clr-primary);
    width: 100%;
    padding-left: 50px;
    align-items: flex-start;
    align-self: flex-start;
    margin-top: 30px;
}

.spacer {
    height: 100px;
    color: white;
    background-color: white;
}

.pill {
    font-size: 16px;
    font-family: 'Montserrat', sans-serif;
    color: var(--clr-primary);
    padding: 15px 20px;
    margin: 0.4em;
    cursor: pointer;
}

.profile-photo {
    align-items: center;
    padding-left: 100px;
}

.profile-edit {
    align-items: center;
    width: 30%;
    align-items: center;
}

/* Body of Profile */
.profile-body {
    margin: 40px 50px;
    font-size: 19px;
    font-family: 'Montserrat', sans-serif;
}

.profile-body > a {
    font-family: 'Montserrat', sans-serif;
    color: var(--clr-primary);
}

.body-myprofile {
    flex-direction: column;
    width: 20%;
    margin-left: 15px;
}

.body-myprofile ul li a {
    text-decoration: none;
    color: var(--clr-primary);
}

.body-myprofile a:hover {
    text-decoration: underline;
}

[class*="body"] > strong {
    color: var(--clr-primary);
    padding-bottom: 10px;
    font-size: 23px;
}

[class*="body"] > hr {
    margin: 0 25px;
    border: 2px solid rgb(187, 186, 186);
    border-radius: 5px;
}

.body-myprofile ul li {
    margin-bottom: 10px;
    color: var(--clr-primary);
}

.body-myreservations {
    width: 60%;
    margin-left: 20px;
}

.body-reservationbox {
    margin: 30px auto;
    font-size: 15px;
    background-color: var(--clr-primary);
    color: white;
    padding: 10px;
    max-width: 800px;
}

.body-reservationbox > div {
    background-color: rgb(74, 147, 74);
    padding: 10px;
    outline: 2px solid rgb(108, 163, 108);
}

.body-editresbtn {
    margin-top: 50px;
    width: 20%;
}

